# seeding-sovereignty

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
src/seeding_sovereignty/: __init__.py  example.py  legistar.py  sheets.py
